fixes 4, slider readability

--- a/khajiit/static/css/webpage.css
+++ b/khajiit/static/css/webpage.css
@@ -88,7 +88,7 @@ a, a:hover, a:visited, a:link, a:active {
 .slider {
     display: inline-block;
     width: 100%;
-    margin-top: 20px;
+    /*margin-bottom: 10px;*/
 }
 
 /*########################*/
